# inference

./: .coveragerc  .gitignore  .gitleaks.toml  .gitmodules  .gn  .pre-commit-config.yaml  404.html  BUILD.gn  CONTRIBUTING.md  DEPS  Makefile  PREPROCESSING-TEMPLATE.md  PRE_COMMIT_SETUP.md  README.md  SubmissionExample.ipynb  Submission_Guidelines.md  explict_zp_to_zero.py  index.html  internal_test.conf  loadgen_pymodule_setup_lib.py  loadgen_pymodule_setup_src.py  main.py  mkdocs.yml  mlperf.conf  mlperf_log_detail.txt  mlperf_spec_verifier.py  pyproject.toml  requirements.txt  scanoss.json  sitemap.xml  specdict.json  test_integration.py  test_whisper_metric.py  test_whisper_metric_logic.py  tests.md
.dvc/: config
.github/: CODEOWNERS
benchmarks/: index.html
build_overrides/: build.gni
changelog/: index.html
ci_scripts/: bert_calib_test.sh  ci_bert_fp8.sh  ci_bert_int8.sh  ci_gpt_j_fp8.sh  ci_gpt_j_int8.sh  ci_llama2-70b_fp8.sh  ci_llama2-70b_int8.sh  ci_llama3-8b_int8.sh  ci_qgpt_j_calib_test_int8.sh  qgpt-j-forward_test.sh  qgpt-j_calib_test.sh  qllama2-70b-forward_test.sh  qllama2-70b_calib_test.sh  set_ci_conda.sh
ci_utils/: check_qparam_equivalence.py
compliance/: README.md
demos/: index.html
docs/: README.md  index.md  llm_accuracy_testing.md  requirements.txt  system_requirements.yml
e2e/: .gitignore  CLAUDE.md  ISL_OSL_statistics.txt  QSL.py  QSL_datasetup.py  README.md  accuracy_eval.py  config.template.sh  data_setup_performance.json  datasetup_accuracy_eval.py  db_manifest.py  download_docs.py  download_pdf.py  eval.py  evaluate.py  evaluation.py  ingestion_monitor.py  llm_logger.py  logs_result.json  measure_indexing.py  measure_indexing_with_chunking.py  multi_shot_retrieval.py  oracle_single_shot.py  params.py  perf_test_cache.py  read_docs.py  read_pdf.py  reference_SUT.py  reference_SUT_datasetup.py  reference_mlperf.py  reference_mlperf_accuracy.sh  reference_mlperf_datasetup.py  reference_mlperf_datasetup.sh  reference_mlperf_datasetup_accuracy.sh  reference_mlperf_perf.sh  requirements.txt  reranker_worker.py  run_compliance_test09.sh  run_datasetup_kpi.sh  run_variation_test.sh  (+6 more)
e2e-rag/: .gitignore  ACCURACY_VS_PERFORMANCE_TESTS.md  CLAUDE.md  MLCOMMONS_ASSETS.md  QSL.py  QSL_datasetup.py  accuracy_eval.py  config.template.sh  data_setup_performance.json  datasetup_accuracy_eval.py  db_manifest.py  download_additional_urls.py  download_docs.py  download_models.sh  evaluate.py  evaluation.py  ingestion_monitor.py  llm_logger.py  measure_indexing_with_chunking.py  multi_shot_retrieval.py  oracle_single_shot.py  params.py  perf_test_cache.py  prepare_loadgen.sh  read_docs.py  reference_SUT.py  reference_SUT_datasetup.py  reference_mlperf.py  reference_mlperf_accuracy.sh  reference_mlperf_datasetup.py  reference_mlperf_datasetup.sh  reference_mlperf_datasetup_accuracy.sh  reference_mlperf_perf.sh  requirements.txt  reranker_worker.py  run_accuracy_test.sh  run_compliance_test09.sh  run_perf_test.sh  single_shot_retrieval.py  text_splitter.py  (+2 more)
edge/: INSTALL_UBUNTU_NUC.md
energy-reporting/: README.md  mlperf_energy_schema_v6.json
gn/: skia_default_configs_override.gni
harness/: ARCHITECTURE.md  DATASET_CONFIG_DESIGN.md  README.md  REFACTORING_SUMMARY.md  SETUP_SUMMARY.md  USAGE_EXAMPLES.md  __init__.py  harness_deepseek_r1.py  harness_gpt_oss_120b.py  harness_llama2_70b.py  harness_llama3.1_8b.py  harness_main.py  harness_qwen3vl.py  upload_to_mlflow.py  user.conf
index_gh/: index.html
inference_harness/: trace_generator.h
install/: index.html
language/: PREPROCESSING_GUIDE.md  preprocessing_examples.py
loadgen/: BUILD.gn  CMakeLists.txt  MANIFEST.in  README.md  README_BUILD.md  README_FAQ.md  VERSION.txt  __init__.py  early_stopping.cc  early_stopping.h  important_interface_code.txt  issue_query_controller.cc  issue_query_controller.h  loadgen.cc  loadgen.h  logging.cc  logging.h  mlperf.conf  mlperf_conf.h  mlperf_spec_constants.h  parse_command_line.cc  pyproject.toml  query_dispatch_library.h  query_sample.h  query_sample_library.h  requirements.txt  results.cc  results.h  setup.py  system_details.cc  system_details.h  system_under_test.h  test_settings.h  test_settings_internal.cc  test_settings_internal.h  trace_generator.h  utils.cc  utils.h  version.cc  version.h  (+2 more)
loadgen/benchmark/: README.md  repro.cpp  run.sh  run_debug.sh
loadgen/bindings/: c_api.cc  c_api.h  python_api.cc
loadgen/demos/: BUILD.gn  demo.py  flask_app.py  py_demo.py  py_demo_constant_gen.py  py_demo_grouped_qsl.py  py_demo_multi_stream.py  py_demo_multi_stream_free.py  py_demo_offline.py  py_demo_server.py  py_demo_server_lon.py  py_demo_single_stream.py
loadgen/demos/lon/: README.md  py_demo_server_lon.py  sut_over_network_demo.py
loadgen/demos/token_metrics/: py_demo_multi_stream.py  py_demo_offline.py  py_demo_offline_inferred.py  py_demo_server.py  py_demo_server_inferred.py  py_demo_single_stream.py
loadgen/docs/src/: BUILD.gn  README.md  doxygen.cfg  doxygen_footer.html  doxygen_header.html  doxygen_html_generator.py  doxygen_layout.xml
loadgen/tests/: BUILD.gn  basic.cc  loadgen_test.h  loadgen_test_main.cc  perftests_null_sut.cc  perftests_null_sut.py
logs/: .gitignore  3d-unet.dvc  bert-squad.dvc  gpt-j.dvc  resnet.dvc  (+2 more)
multimodal/qwen3-vl/: .gitignore  README.md  example_user.conf  pyproject.toml
multimodal/qwen3-vl/docker/: vllm-cuda.Dockerfile
multimodal/qwen3-vl/notebooks/: shopify-global-catalogue.ipynb
multimodal/qwen3-vl/scripts/: linters.sh
multimodal/qwen3-vl/scripts/slurm/: benchmark.sh  evaluate.sh  submit.sh
multimodal/qwen3-vl/src/mlperf_inf_mm_q3vl/: __init__.py  benchmark.py  cli.py  deploy.py  evaluation.py  log.py  schema.py  task.py
test_harness/: BUILD.gn  README.md  README_BUILD.md  parse_command_line.cc  query_allocator.cc  query_allocator.h  query_residency_manager.cc  query_residency_manager.h  query_sample.h  query_sample_library.h  query_sample_library_registry.h  system_under_test.h  system_under_test_c_api.cc  system_under_test_c_api.h  test_harness.cc  test_harness.h  trace_generator.h
(+3940 files in other folders)
