buildconfig = "//build/config/BUILDCONFIG.gn"

# These arguments can be overriden via:
# gn gen out/Default --args="is_debug=true"
default_args = {
  # Default to release builds for this project.
  is_debug = false
  # Link objects into one big lib rather than
  # multiple component libs.
  is_component_build = false

  # Set use_sysroot to true to use chromium-versioned toolchains
  # as found inside //buildtools.
  # A value of false uses the system's default toolchians.
  use_sysroot = false

  # Likely want to keep this the same value use_sysroot.
  use_custom_libcxx = use_sysroot

  # is_clang: Set to true to use chromium-versioned clang.
  is_clang = false
}
